# AgentEvalKit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_evalkit/: __init__.py  cli.py
agent_evalkit/adapters/: __init__.py  cli_adapter.py  python_adapter.py
agent_evalkit/diff/: __init__.py  compare.py
agent_evalkit/fingerprint/: __init__.py  env_snapshot.py  fingerprint.py
agent_evalkit/reports/: __init__.py  markdown_report.py
agent_evalkit/runners/: __init__.py  base.py
agent_evalkit/scorers/: __init__.py  behavior_compliance.py  schema_validity.py
agent_evalkit/specs/: __init__.py  loader.py
agent_evalkit/traces/: __init__.py  collector.py
docs/: design.md  runs_layout.md
examples/: extract_output.invalid.missing_answer.json  extract_output.invalid.wrong_citations_type.json  extract_output.valid.json  fake_agent.py  regression_report.sample.md  task_echo.yaml  task_math.yaml
schemas/: extract_output.schema.json  task_spec.schema.json  trace.schema.json
tests/: conftest.py  test_behavior_compliance_scorer.py  test_cli_adapter.py  test_cli_smoke.py  test_diff_compare.py  test_fingerprint.py  test_markdown_report.py  test_python_adapter.py  test_run_record_persistence.py  test_schema_examples.py  test_schema_validity_scorer.py  test_task_spec_loader.py  test_task_spec_schema.py  test_trace_collector.py
